[gd_scene format=3 uid="uid://dtscndjovc576"]

[ext_resource type="Script" uid="uid://c8fd7ee8cdfje" path="res://Main/World/dungeon_generator.gd" id="1_f3sb7"]
[ext_resource type="Texture2D" uid="uid://daeykmc6yagfa" path="res://Assets/ExternalAssets/0x72_DungeonTilesetII_v1.7/atlas_floor-16x16.png" id="1_tlwt5"]
[ext_resource type="Script" uid="uid://1oyj3wyxqt10" path="res://Main/World/world.gd" id="2_wgds0"]
[ext_resource type="PackedScene" uid="uid://p3k5hxslhfb2" path="res://Main/Player/player.tscn" id="3_plscn"]
[ext_resource type="PackedScene" uid="uid://cgafamafmks6e" path="res://Main/Enemy/enemy.tscn" id="4_enemy"]
[ext_resource type="PackedScene" uid="uid://88npcoe0nnkb" path="res://Main/Drop/drop.tscn" id="5_drops"]
[ext_resource type="Texture2D" uid="uid://dlsm8v6ero26j" path="res://Assets/ExternalAssets/0x72_DungeonTilesetII_v1.7/atlas_walls_high-16x32.png" id="6_pkg7o"]
[ext_resource type="PackedScene" uid="uid://c23n1ijj64c76" path="res://Main/Ambient/dark_manager.tscn" id="8_n0xby"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_036b0"]
texture = ExtResource("1_tlwt5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
5:6/0 = 0

[sub_resource type="TileSet" id="TileSet_dwbse"]
sources/0 = SubResource("TileSetAtlasSource_036b0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pkg7o"]
texture = ExtResource("6_pkg7o")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
11:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
21:5/0 = 0
22:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0

[sub_resource type="TileSet" id="TileSet_gbfbk"]
physics_layer_0/collision_layer = 9
sources/0 = SubResource("TileSetAtlasSource_pkg7o")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_deco"]
texture = ExtResource("6_pkg7o")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:0/0 = 0
2:1/0 = 0
3:0/0 = 0
3:1/0 = 0
4:0/0 = 0
4:1/0 = 0
5:0/0 = 0
5:1/0 = 0
6:0/0 = 0
6:1/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
9:1/0 = 0
10:1/0 = 0
9:2/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
8:1/0 = 0
7:1/0 = 0
7:2/0 = 0
6:2/0 = 0
8:2/0 = 0
5:2/0 = 0
4:2/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
9:3/0 = 0
11:3/0 = 0
11:2/0 = 0
11:1/0 = 0
11:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
14:1/0 = 0
13:1/0 = 0
12:1/0 = 0
15:2/0 = 0
14:3/0 = 0
13:3/0 = 0
12:3/0 = 0
15:3/0 = 0
15:1/0 = 0
15:0/0 = 0
16:0/0 = 0
16:1/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
18:2/0 = 0
17:2/0 = 0
16:2/0 = 0
0:5/0 = 0
0:6/0 = 0
1:7/0 = 0
1:6/0 = 0
1:5/0 = 0
1:4/0 = 0
2:4/0 = 0
2:5/0 = 0
2:6/0 = 0
0:7/0 = 0
2:7/0 = 0
3:7/0 = 0
3:6/0 = 0
4:6/0 = 0
4:5/0 = 0
3:4/0 = 0
3:5/0 = 0
4:7/0 = 0
5:6/0 = 0
5:5/0 = 0
5:4/0 = 0
4:4/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
9:6/0 = 0
8:5/0 = 0
7:5/0 = 0
6:5/0 = 0
8:6/0 = 0
10:6/0 = 0
10:5/0 = 0
9:5/0 = 0
7:6/0 = 0
6:6/0 = 0
11:6/0 = 0
11:4/0 = 0
10:4/0 = 0
9:4/0 = 0
8:4/0 = 0
7:4/0 = 0
6:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:6/0 = 0
23:6/0 = 0
22:5/0 = 0
21:5/0 = 0
18:5/0 = 0
17:5/0 = 0
15:5/0 = 0
14:5/0 = 0
13:5/0 = 0
12:5/0 = 0
11:5/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:7/0 = 0
23:7/0 = 0

[sub_resource type="TileSet" id="TileSet_deco"]
sources/0 = SubResource("TileSetAtlasSource_deco")

[node name="World" type="Node2D" unique_id=1471475609]
script = ExtResource("2_wgds0")
player_scene = ExtResource("3_plscn")
enemy_scene = ExtResource("4_enemy")
drop_scene = ExtResource("5_drops")

[node name="FloorLayer" type="TileMapLayer" parent="." unique_id=86723657]
position = Vector2(0, 2)
tile_set = SubResource("TileSet_dwbse")

[node name="WallLayer" type="TileMapLayer" parent="." unique_id=1599969311]
tile_set = SubResource("TileSet_gbfbk")

[node name="WallDecoLayer" type="TileMapLayer" parent="." unique_id=1234509876]
tile_set = SubResource("TileSet_deco")

[node name="DungeonGenerator" type="Node" parent="." unique_id=1897961127]
script = ExtResource("1_f3sb7")

[node name="DarkManager" parent="." unique_id=902873304 instance=ExtResource("8_n0xby")]
